--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#sobre-mi">Sobre mí</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#contacto">Contactos</a></li>
+                <!-- <li><a href="#contacto">Contactos</a></li> -->
             </ul>
         </nav>
        
